# linkvirt-ovs-openstack-plugin

./: README.rst  setup.cfg
networking_napatech/: __init__.py  mech_linkvirt_ovs.py
vif_plug_linkvirt_ovs/: __init__.py  linkvirt_ovs.py  lv_ovs.py  privsep.py
vif_plug_linkvirt_ovs/ovsdb/: lv_ovsdb_lib.py
