[metadata]
name = linkvirt-ovs-openstack-plugin
summary = Neutron ML2 and OS-VIF plugin for Napatech LinkVirtualization OVS
description-file =
    README.rst
author = Napatech
author-email = opensource@napatech.com
home-page = https://github.com/napatech/linkvirt-ovs-openstack-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_napatech
    vif_plug_linkvirt_ovs
    vif_plug_linkvirt_ovs/ovsdb

[entry_points]
neutron.ml2.mechanism_drivers =
    linkvirt_ovs = networking_napatech.mech_linkvirt_ovs:LinkvirtOvsMechanismDriver
os_vif =
    linkvirt_ovs = vif_plug_linkvirt_ovs.linkvirt_ovs:LinkvirtOvsPlugin
